--- a/bin/basic.css
+++ b/bin/basic.css
@@ -2,13 +2,27 @@
   background: #fafafa;
   border-top: 1px solid #ddd;
   border-left: 1px solid #ddd;
+  font-size: 14px;
 }
 .ft-row {
   border-bottom: 1px solid #ddd;
+}
+.ft-row-values {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+}
+.ft-row .ft-row {
+  border-bottom: 0;
+  border-top: 1px solid #ddd;
+  text-indent: 10px;
+}
+.ft-row .ft-row .ft-row {
+  text-indent: 20px;
+}
+.ft-row .ft-row .ft-row .ft-row {
+  text-indent: 30px;
 }
 .ft-col {
   border-right: 1px solid #ddd;
@@ -18,5 +32,8 @@
       -ms-flex: auto;
           flex: auto;
   min-height: 30px;
-  padding: 5px;
+  padding: 8px;
+}
+.ft-col:not(:first-child) {
+  text-indent: 0 !important;
 }
