--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -32,3 +32,9 @@
 
     &:not(:first-child)
       text-indent 0!important
+
+    &:nth-child(1)
+      width 50%
+
+    &:nth-child(2), &:nth-child(3), &:nth-child(4)
+      width 16.6667%
