--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -6,6 +6,7 @@ $basePadding = 8px
     border-top 1px solid #ddd
     border-left 1px solid #ddd
     font-size 14px
+    max-height 500px
 
   &-row
     border-bottom 1px solid #ddd
@@ -54,3 +55,5 @@ $basePadding = 8px
 
     &:nth-child(2), &:nth-child(3), &:nth-child(4)
       width 16.6667%
+
+@import "fixed" // leave this out if you want flexible cell widths
