--- a/demo/styl/fixed.styl
+++ b/demo/styl/fixed.styl
@@ -18,7 +18,7 @@ clearfix()
     clearfix()
 
     &-values
-      float left // gross hack to get flex container to stretch in width
+      float left // gross hack to get flex container to match width of children
 
   &-col
     &:nth-child(1)
