--- a/bin/basic.css
+++ b/bin/basic.css
@@ -1,9 +1,15 @@
-.ft-table {
+.ft-table-container {
   background: #fafafa;
   border-top: 1px solid #ddd;
   border-left: 1px solid #ddd;
   font-size: 14px;
-  max-height: 500px;
+  position: relative;
+}
+.ft-table-header-rows {
+  background: #fff;
+  font-weight: bold;
+  position: absolute;
+  top: 0;
 }
 .ft-row {
   border-bottom: 1px solid #ddd;
@@ -13,6 +19,9 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+}
+.ft-row.ft-row-fixed-header {
+  visibility: hidden;
 }
 .ft-row .ft-row {
   border-bottom: 0;
@@ -65,20 +74,26 @@
 .ft-col:nth-child(4) {
   width: 16.6667%;
 }
-.ft-table {
+.ft-table-container {
   border-right: 1px solid #ddd;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   zoom: 1;
 }
-.ft-table:after,
-.ft-table:before {
+.ft-table-container:after,
+.ft-table-container:before {
   content: "";
   display: table;
 }
-.ft-table:after {
+.ft-table-container:after {
   clear: both;
 }
+.ft-table {
+  max-height: 500px;
+  overflow-y: auto;
+}
 .ft-row {
+  clear: both;
   float: left;
   zoom: 1;
 }
@@ -91,6 +106,7 @@
   clear: both;
 }
 .ft-row-values {
+  clear: both;
   float: left;
 }
 .ft-col:nth-child(1) {
