--- a/demo/styl/fixed.styl
+++ b/demo/styl/fixed.styl
@@ -8,15 +8,11 @@ clearfix()
     clear both
 
 .ft
-  &-table-container
-    border-right 1px solid #ddd
-    overflow-y auto
-    overflow-x hidden
-    clearfix()
-
   &-table
+    border-right 1px solid #ddd
+    overflow auto
     max-height 500px
-    overflow-y auto
+    clearfix()
 
   &-row
     clear both
