--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -1,18 +1,18 @@
 $basePadding = 8px
 
 .ft
-  &-table-container
+  &-table
     background #fafafa
     border-top 1px solid #ddd
     border-left 1px solid #ddd
     font-size 14px
     position relative
 
-  &-table-header-rows
-    background #fff
-    font-weight bold
-    position absolute
-    top 0
+    &-fixed-top
+      background #fff
+      font-weight bold
+      position absolute
+      top 0
 
   &-row
     border-bottom 1px solid #ddd
