--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -14,14 +14,15 @@ $basePadding = 8px
       position absolute
       top 0
 
+  &-row-fixed
+  &-col-fixed
+    visibility hidden
+
   &-row
     border-bottom 1px solid #ddd
 
     &-values
       display flex
-
-    &.ft-row-fixed-header
-      visibility hidden
 
     // nested rows
     .ft-row
