--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -9,10 +9,16 @@ $basePadding = 8px
     position relative
 
     &-fixed-top
-      background #fff
-      font-weight bold
+    &-fixed-left
       position absolute
       top 0
+
+    &-fixed-top
+      font-weight bold
+      background #fff
+
+    &-fixed-left
+      background #fafafa
 
   &-row-fixed
   &-col-fixed
