--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -10,15 +10,21 @@ $basePadding = 8px
 
     &-fixed-top
     &-fixed-left
+    &-fixed-top-left
       position absolute
       top 0
 
     &-fixed-top
+    &-fixed-top-left
       font-weight bold
       background #fff
 
     &-fixed-left
       background #fafafa
+
+    // make sure corner pieces are on top
+    &-fixed-top-left
+      z-index 1
 
   &-row-fixed
   &-col-fixed
@@ -67,7 +73,7 @@ $basePadding = 8px
     border-right 1px solid #ddd
     box-sizing border-box
     flex auto
-    min-height 30px
+    line-height 16px
     padding $basePadding
 
     &:nth-child(1)
