--- a/demo/styl/fixed.styl
+++ b/demo/styl/fixed.styl
@@ -23,7 +23,7 @@ clearfix()
       clear both
       float left // gross hack to get flex container to match width of children
 
-  &-col
+  &-cell
     &:nth-child(1)
       width 400px
 
