--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -36,7 +36,7 @@ $basePadding = 8px
 
     // rows that start a grouping
     &-fold-header
-      > .ft-col:first-child
+      > .ft-cell:first-child
         user-select none
         cursor pointer
 
@@ -45,21 +45,21 @@ $basePadding = 8px
           display inline-block
           margin-right 5px
 
-      &.ft-row-expanded > .ft-col:first-child:before
+      &.ft-row-expanded > .ft-cell:first-child:before
         transform rotate(90deg)
 
-    &-indent-1 > .ft-col:first-child
+    &-indent-1 > .ft-cell:first-child
       padding-left 24px
-    &-indent-2 > .ft-col:first-child
+    &-indent-2 > .ft-cell:first-child
       padding-left 40px
-    &-indent-3 > .ft-col:first-child
+    &-indent-3 > .ft-cell:first-child
       padding-left 56px
 
     // TODO: not sure how this works in the flat structure
     &-collapsed
       display none
 
-  &-col
+  &-cell
     border-right 1px solid #ddd
     box-sizing border-box
     flex auto
