--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -55,8 +55,7 @@ $basePadding = 8px
     &-indent-3 > .ft-cell:first-child
       padding-left 56px
 
-    // TODO: not sure how this works in the flat structure
-    &-collapsed
+    &-hidden
       display none
 
   &-cell
