--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -1,28 +1,34 @@
 $basePadding = 8px
 
+$borderColor = #ddd
+$cellColor = #fafafa
+$headerCellColor = #fff
+
 /* STRUCTURAL  */
-.fancy-grid, .fancy-grid * {
-  box-sizing: border-box;
-}
-.fancy-grid, .fancy-grid .view {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-.fancy-grid .row, .fancy-grid .column {
-  position: absolute;
-  overflow: hidden;
-}
-.fancy-grid .pane {
-  position: absolute;
-  overflow: hidden;
-}
-.fancy-grid .anchor {
-  position: relative;
-}
-.fancy-grid .row, .fancy-grid .column {
-  pointer-events: none;
-}
+.fancy-grid,
+.fancy-grid *
+  box-sizing border-box
+
+
+.fancy-grid,
+.fancy-grid .view
+  position relative
+  width 100%
+  height 100%
+
+.fancy-grid .row,
+.fancy-grid .column,
+.fancy-grid .pane
+  position absolute
+  overflow hidden
+
+.fancy-grid .anchor
+  position relative
+
+.fancy-grid .row,
+.fancy-grid .column
+  pointer-events none
+
 .fancy-grid .grid9 .column.left { z-index: 11; }
 .fancy-grid .grid9 .row.top { z-index: 12; }
 .fancy-grid .grid9 .pane.middle.center { z-index: 0; }
@@ -53,31 +59,31 @@ $basePadding = 8px
 
 
 .fancy-grid
-    background #fafafa
-    border-top 1px solid #ddd
-    border-left 1px solid #ddd
-    font-size 14px
-    position relative
+  font-size 14px
+  overflow hidden
+  position relative
 
+  .pane
+    background $cellColor
 
   .pane.top
     font-weight bold
-    background #fff
-
-  .pane.left
-    background #fafafa
+    background $cellHeaderColor
 
   .cell
-    border-right 1px solid #ddd
+    border-right 1px solid $borderColor
+    border-bottom 1px solid $borderColor
     box-sizing border-box
     line-height 16px
     padding $basePadding
+    width 20%
 
-    &:nth-child(1)
+    &.col-0
+      border-left 1px solid $borderColor
       width 50%
 
-    &:nth-child(2), &:nth-child(3), &:nth-child(4)
-      width 16.6667%
+  .row-0
+    border-top 1px solid $borderColor
 
 @import "fixed" // leave this out if you want flexible cell widths
 
