display selection and active

--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -115,3 +115,27 @@ $headerCellColor = #fff
       padding-left 40px
     &-indent-3 .ft-cell-content
       padding-left 56px
+
+.fancy-grid
+  .selected
+    background-color: #E9F3FF
+  .selected-left
+    border-left: 1px solid #0086F8
+    .ft-cell-content
+      padding-left: 7px
+  .selected-right
+    border-right: 1px solid #0086F8
+    .ft-cell-content
+      padding-right: 7px
+  .selected-top
+    border-top: 1px solid #0086F8
+    .ft-cell-content
+      padding-top: 7px
+  .selected-bottom
+    border-bottom: 1px solid #0086F8
+    .ft-cell-content
+      padding-bottom: 7px
+  .active
+    border: 2px solid #0086F8
+    .ft-cell-content
+      padding: 6px
