Working refactored demo

--- a/bin/basic.css
+++ b/bin/basic.css
@@ -132,21 +132,20 @@
 .col-0 .ft-row-indent-3 .ft-cell-content {
   padding-left: 56px;
 }
+
+/* Selection */
+
 .fancy-grid .selected {
   background-color: #e9f3ff;
 }
 .fancy-grid .selected-left {
   border-left: 1px solid #0086f8;
 }
-.fancy-grid .selected-left .ft-cell-content {
-  padding-left: 7px;
-}
+
 .fancy-grid .selected-right {
   border-right: 1px solid #0086f8;
 }
-.fancy-grid .selected-right .ft-cell-content {
-  padding-right: 7px;
-}
+
 .fancy-grid .selected-top {
   border-top: 1px solid #0086f8;
 }
@@ -163,5 +162,6 @@
   border: 2px solid #0086f8;
 }
 .fancy-grid .active .ft-cell-content {
-  padding: 6px;
+  padding-bottom: 6px;
+  padding-top: 6px;
 }
