--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -115,6 +115,7 @@ $headerCellColor = #fff
       padding-left 56px
 
 .fancy-grid
+  user-select: none
   .selected
     background-color #E9F3FF
   .selected-left
