--- a/demo/styl/index.styl
+++ b/demo/styl/index.styl
@@ -4,6 +4,9 @@ $borderColor = #ddd
 $cellColor = #fafafa
 $headerCellColor = #fff
 
+body
+  padding: 20px
+
 /* STRUCTURAL  */
 .fancy-grid,
 .fancy-grid *
